--- a/.github/workflows/master_mynopcommerce1234.yml
+++ b/.github/workflows/master_mynopcommerce1234.yml
@@ -23,7 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build '/src/NopCommerce.sln' --configuration Release
+        run: cd src || dotnet build NopCommerce.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
