--- a/.github/workflows/master_mynopcommerce1234.yml
+++ b/.github/workflows/master_mynopcommerce1234.yml
@@ -26,7 +26,7 @@ jobs:
         run: cd src || dotnet build NopCommerce.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: cd src || dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
