--- a/.github/workflows/master_mynopcommerce1234.yml
+++ b/.github/workflows/master_mynopcommerce1234.yml
@@ -39,7 +39,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: ${{ https://nopcommerce444.azurewebsites.net }}
 
     steps:
       - name: Download artifact from build job
